@@ -127,44 +127,6 @@ notes</a>) into GCJ.</dd>
 &quot;<a href="http://www.redhat.com/magazine/012oct05/features/java/">The
 state of Java on Linux</a>&quot; by Tom Tromey.</dd>
 
-<dt>September 23, 2005</dt>
-<dd>Tom Tromey has imported <a
-href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.18 (<a
-href="http://www.gnu.org/software/classpath/announce/20050906.html">release
-notes</a>) into GCJ.</dd>
-
-<dt>July 15, 2005</dt>
-<dd>Tom Tromey has <a
-href="http://gcc.gnu.org/ml/java-patches/2005-q3/msg00093.html">integrated</a>
-<a href="http://www.gnu.org/software/classpath/">GNU Classpath</a> into the
-GCJ build in such a way that it becomes <a
-href="http://gcc.gnu.org/ml/java/2005-05/msg00202.html">much easier</a> to
-import the latest GNU Classpath into GCJ. This particular import brings in GNU
-Classpath 0.17 (<a
-href="http://www.gnu.org/software/classpath/announce/20050715.html">release
-notes</a>).</dd>
-
-<dt>April 6, 2005</dt>
-<dd>Mark Wielaard has written &quot;<a
-href="http://lwn.net/Articles/130796/">GCJ - past, present, and
-future</a>&quot; for LWN.net.</dd>
-
-<dt>March 10, 2005</dt>
-<dd>Bryce McKinlay has merged in <a
-href="http://gcc.gnu.org/ml/java-patches/2005-q1/msg00712.html">a new stack
-trace mechanism</a> that is based on GCC's unwind support and provides
-cleaner and faster stack traces.</dd>
-
-<dt>February 15, 2005</dt>
-<dd>Thomas Fitzsimmons has checked in an implementation of libjawt, the
-AWT Native interface.  Among other things, this enables the JOGL
-(OpenGL for Java) bindings to work.</dd>
-
-<dt>February 1, 2005</dt>
-<dd>We've merged GNU JAXP into the core.  This includes many classes
-in <code>javax.xml</code>, plus updated versions
-of <code>org.xml.sax</code> and <code>org.w3c.dom</code>.</dd>
-
 </dl>
 
 <a href="news.html">Less recent GCJ news</a>
