@@ -12,13 +12,50 @@
 
 <dl class="news">
 
+<dt>September 23, 2005</dt>
+<dd>Tom Tromey has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.18 (<a
+href="http://www.gnu.org/software/classpath/announce/20050906.html">release
+notes</a>) into GCJ.</dd>
+
+<dt>July 15, 2005</dt>
+<dd>Tom Tromey has <a
+href="http://gcc.gnu.org/ml/java-patches/2005-q3/msg00093.html">integrated</a>
+<a href="http://www.gnu.org/software/classpath/">GNU Classpath</a> into the
+GCJ build in such a way that it becomes <a
+href="http://gcc.gnu.org/ml/java/2005-05/msg00202.html">much easier</a> to
+import the latest GNU Classpath into GCJ. This particular import brings in GNU
+Classpath 0.17 (<a
+href="http://www.gnu.org/software/classpath/announce/20050715.html">release
+notes</a>).</dd>
+
+<dt>April 6, 2005</dt>
+<dd>Mark Wielaard has written &quot;<a
+href="http://lwn.net/Articles/130796/">GCJ - past, present, and
+future</a>&quot; for LWN.net.</dd>
+
+<dt>March 10, 2005</dt>
+<dd>Bryce McKinlay has merged in <a
+href="http://gcc.gnu.org/ml/java-patches/2005-q1/msg00712.html">a new stack
+trace mechanism</a> that is based on GCC's unwind support and provides
+cleaner and faster stack traces.</dd>
+
+<dt>February 15, 2005</dt>
+<dd>Thomas Fitzsimmons has checked in an implementation of libjawt, the
+AWT Native interface.  Among other things, this enables the JOGL
+(OpenGL for Java) bindings to work.</dd>
+
+<dt>February 1, 2005</dt>
+<dd>We've merged GNU JAXP into the core.  This includes many classes
+in <code>javax.xml</code>, plus updated versions
+of <code>org.xml.sax</code> and <code>org.w3c.dom</code>.</dd>
+
 <dt>November 25, 2004</dt>
 <dd>
 John David Anglin checked in <a
 href="http://gcc.gnu.org/ml/gcc-patches/2004-11/msg02214.html">a patch</a>
 to enable libjava to be built by default on hppa-unknown-linux-gnu.
 </dd>
-
 
 <dt>November 22, 2004</dt>
 <dd>
@@ -27,7 +64,6 @@ been merged to the trunk.  This work includes a new ABI which allows
 precompiled code to follow the binary compatibility rules of the Java
 programming language.
 </dd>
-
 
 <dt>September 21, 2004</dt>
 <dd>
@@ -46,7 +82,6 @@ project, a full TLS implementation is provided by the
 <a href="http://www.nongnu.org/jessie/">Jessie</a> project.
 </dd>
 
-
 <dt>July 16, 2004</dt>
 <dd>
 AWT and Swing support continues to improve rapidly. Thomas Fitzsimmons of Red Hat
@@ -56,7 +91,6 @@ Here's the
 <a href="http://people.redhat.com/fitzsim/slime-volleyball-screenshots.html">
 evidence</a>!
 </dd>
-
 
 <dt>July 16, 2004</dt>
 <dd>
@@ -68,7 +102,6 @@ features an article (not available online) on GCJ and the Compiled Native
 Interface (<a href="http://gcc.gnu.org/onlinedocs/gcj/About-CNI.html">CNI</a>).
 </dd>
 
-
 <dt>March 9, 2004</dt>
 <dd>
 Thanks to Wes Biggs and the other GNU Regexp authors, Mark Wielaard
@@ -78,7 +111,6 @@ arrives a little too late for gcc 3.4, but it will appear in the next
 major release.
 </dd>
 
-
 <dt>January 22, 2004</dt>
 <dd>
 Graydon Hoare has checked in
@@ -86,7 +118,6 @@ Graydon Hoare has checked in
 patch to implement Swing buttons</a>.  This is the first working Swing code,
 a major improvement.  See the <a href="swingshot.png">screen shot</a>.
 </dd>
-
 
 <dt>January 9, 2004</dt>
 <dd>
@@ -96,7 +127,6 @@ large reorganization</a> of <code>-findirect-dispatch</code>.  This is
 an important step toward the new binary compatibility ABI.
 </dd>
 
-
 <dt>September 3, 2003</dt>
 <dd>
 Jeff Sturm has adapted Jan Hubicka's call graph optimization code to gcj.
@@ -104,7 +134,6 @@ This code improves gcj's method inlining abilities with support for
 out-of-order methods and inter-class method calls, along with improved
 code size heuristics.  It is enabled by default when compiling at -O3.
 </dd>
-
 
 <dt>August 4, 2003</dt>
 <dd>
@@ -116,14 +145,12 @@ Naoko basically comprises binary RPMS of Ant, Tomcat, and their
 dependencies built with gcj.
 </dd>
 
-
 <dt>August 2, 2003</dt>
 <dd>
 Tom Tromey, Andrew Haley and others from Red Hat win the 
 <a href="http://lists.gnu.org/archive/html/classpath/2003-08/msg00004.html">
 Fast Free Eclipse Prize</a>.
 </dd>
-
 
 <dt>August 1, 2003</dt>
 <dd>
@@ -135,7 +162,6 @@ You can find more information
 integrating the required gcj patches into cvs in the near future.
 </dd>
 
-
 <dt>July 31, 2003</dt>
 <dd>
 Andrew Haley has checked in a major patch to the
@@ -145,14 +171,12 @@ from <code>.class</code> files.  This is an important step towards
 better high-level optimizations for Java.
 </dd>
 
-
 <dt>July 30, 2003</dt>
 <dd>
 Thanks to Andreas Tobler and Jeff Sturm, libgcj is now built by
 default for Darwin.  This work is available on the cvs trunk, and
 will show up in GCJ 3.4.
 </dd>
-
 
 <dt>July 28, 2003</dt>
 <dd>
@@ -163,7 +187,6 @@ like Mozilla, Konqueror, and Opera.  Currently it is still a
 proof-of-concept.
 </dd>
 
-
 <dt>May 14, 2003</dt>
 <dd>
 <a href="http://gcc.gnu.org/gcc-3.3/">GCC 3.3 has been released</a>.
@@ -172,13 +195,11 @@ and JDBC 3.0 support in <code>java.sql</code>
 and <code>javax.sql</code>, among other things.
 </dd>
 
-
 <dt>January 3, 2003</dt>
 <dd>
 Jeff Sturm implemented libffi closures for SPARC so that libgcj's
 bytecode interpreter is now available on SPARC Solaris hosts.
 </dd>
-
 
 <dt>January 1, 2003</dt>
 <dd>
@@ -186,7 +207,6 @@ The January 2003 issue of Linux Journal contains the article
 <a href="http://www.linuxjournal.com/article.php?sid=4860">
 <cite>Compiling Java with GCJ</cite></a> by Per Bothner.
 </dd>
-
 
 <dt>December 27, 2002</dt>
 <dd>
@@ -196,13 +216,11 @@ others. Mark has a web page with further information and screenshots <a
 href="http://www.klomp.org/mark/gij_eclipse/index.html">here</a>.
 </dd>
 
-
 <dt>September 29, 2002</dt>
 <dd>
 Ulrich Weigand has implemented the necessary support in libffi to get
 libgcj running on the s390x.
 </dd>
-
 
 <dt>September 29, 2002</dt>
 <dd>
@@ -210,19 +228,16 @@ Anthony Green merged the java.lang.reflect.Proxy implementation in from
 GNU Classpath.
 </dd>
 
-
 <dt>August 16, 2002</dt>
 <dd>
 Andrew Haley updated the gcc tree-based inliner to work for gcj.
 </dd>
-
 
 <dt>July 25, 2002</dt>
 <dd>
 Kaz Kojima has implemented the necessary support in libffi and libjava
 to get libgcj running on SH-3/4.
 </dd>
-
 
 <dt>July 19, 2002</dt>
 <dd>
@@ -231,7 +246,6 @@ boehm-gc and libjava to get libgcj running on x86-64. This is a big
 step towards getting libgcj fully supported on x86-64.
 </dd>
 
-
 <dt>June 24, 2002</dt>
 <dd>
 Tom Tromey has checked in a patch that makes the bytecode interpreter
@@ -239,19 +253,16 @@ use direct threading.  This gives the interpreter a performance
 boost.
 </dd>
 
-
 <dt>June 21, 2002</dt>
 <dd>
 The <code>java.sql</code> and <code>javax.sql</code> packages were updated
 by Bryce McKinlay to implement the JDBC 3.0 (JDK 1.4) API.
 </dd>
 
-
 <dt>June 11, 2002</dt>
 <dd>
 Tom Tromey has implemented the JDK 1.4 <code>assert</code> facility.
 </dd>
-
 
 <dt>March 10, 2002</dt>
 <dd>
@@ -263,7 +274,6 @@ href="http://www.xwt.org/">XWT</a>.  This work will appear in the
 upcoming 3.1 release.
 </dd>
 
-
 <dt>February 28, 2002</dt>
 <dd>
 Bryce McKinlay has contributed a patch to optimize some of the array
@@ -274,7 +284,6 @@ flag can be used to disable the check operations. In which case it can
 provide a reasonable performance boost and slight code size reduction.
 </dd>
 
-
 <dt>January 22, 2002</dt>
 <dd>
 Tom Tromey has contributed a patch to allow certain Java method calls
@@ -283,7 +292,6 @@ are now inlined when optimization is enabled.  This patch includes
 some infrastructure to make it easy to add more such inlines when
 desired.
 </dd>
-
 
 <dt>January 14, 2002</dt>
 <dd>
@@ -294,14 +302,12 @@ Work has already begun to merge the Classpath and libgcj AWT
 implementations.
 </dd>
 
-
 <dt>January 14, 2002</dt>
 <dd>
 Adam Megacz announced that <a href="http://www.xwt.org">XWT</a> is
 an ActiveX control which is written in Java and compiled with gcj.
 We hope to be checking in his Windows patches in the near future.
 </dd>
-
 
 <dt>December 14, 2001</dt>
 <dd>
@@ -310,13 +316,11 @@ libgcj to work on IA-64.  His changes also speed up allocation of
 objects which don't require a finalizer.
 </dd>
 
-
 <dt>November 5, 2001</dt>
 <dd>
 Tom Tromey contributed a bytecode verifier.  It hasn't yet been
 extensively tested, so it is still disabled by default.
 </dd>
-
 
 <dt>October 24, 2001</dt>
 <dd>
@@ -325,13 +329,11 @@ Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
 finished by Warren Levy and Tom.
 </dd>
 
-
 <dt>October 2, 2001</dt>
 <dd>
 Tom Tromey of Red Hat has written the support code necessary to
 implement <code>java.lang.ref.*</code>.
 </dd>
-
 
 <dt>September 7, 2001</dt>
 <dd>
@@ -346,7 +348,6 @@ dependencies.  See the <code>--resource</code> option in the gcj
 manual for details.
 </dd>
 
-
 <dt>August 27, 2001</dt>
 <dd>
 Tom Tromey has imported RMI into libgcj.  This RMI implementation was
@@ -355,14 +356,12 @@ Transvirtual Technologies; many thanks to them for their important
 contribution.
 </dd>
 
-
 <dt>June 18, 2001</dt>
 <dd>
-<dt>GCC 3.0 has been released!</dt> Everything you need to build and run GCJ is now 
+GCC 3.0 has been released! Everything you need to build and run GCJ is now 
 included in a single source distribution. Download it from one of our
 <a href="../mirrors.html">mirror sites</a>.
 </dd>
-
 
 <dt>June 4, 2001</dt>
 <dd>
@@ -373,7 +372,6 @@ Brainfood is using this to attach an Apache module to a pre-compiled
 servlet-like class.
 </dd>
 
-
 <dt>May 30, 2001</dt>
 <dd>
 We now have a new hash-table based lightweight lock implementation which was 
@@ -382,13 +380,11 @@ improve performance for applications which do a lot of synchronization.
 Currently, this code is enabled for IA-64 and X86 Linux.
 </dd>
 
-
 <dt>April 25, 2001</dt>
 <dd>
 Bryce McKinlay merged <tt>java.security</tt> with Classpath.
 The new package is now JDK 1.2 compliant, and much more complete.
 </dd>
-
 
 <dt>March 25, 2001</dt>
 <dd>
@@ -397,14 +393,12 @@ via <a href="papers/cni/t1.html">CNI</a>, thanks to Bryce McKinlay's compiler
 work. <a href="http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html">Details.</a>
 </dd>
 
-
 <dt>March 25, 2001</dt>
 <dd>
 Kevin B. Hendricks implemented the necessary FFI support to get the 
 libgcj interpreter running on PowerPC. This is now one of our fully supported 
 targets!
 </dd>
-
 
 <dt>March 7, 2001</dt>
 <dd>
@@ -414,7 +408,6 @@ include everything you need to build and run GCJ, and should be much
 more stable than the main development tree -- so try them out and help us
 find bugs!
 </dd>
-
 
 <dt>February 8, 2001</dt>
 <dd>
@@ -432,7 +425,6 @@ and the env var <tt>MAUVEDIR</tt> is set to point to the top-level
 of the <a href="http://sources.redhat.com/mauve/download.html">Mauve source</a>.
 </dd>
 
-
 <dt>January 28, 2001</dt>
 <dd>
 The various gcj mailing lists have moved to gcc.gnu.org.
@@ -442,13 +434,11 @@ for all the gory details.  With this change, the gcj project
 is now fully merged into GCC.
 </dd>
 
-
 <dt>January 17, 2001</dt>
 <dd>
 GCJ is now compatible with the V3 C++ ABI, thanks to the efforts of 
 Alexandre Petit-Bianco.
 </dd>
-
 
 <dt>December 20, 2000</dt>
 <dd>
@@ -457,13 +447,11 @@ The old database continues to exist but only for reference purposes;
 it is now read-only.
 </dd>
 
-
 <dt>December 9, 2000</dt>
 <dd>
 Thanks to Richard Henderson's recent <code>libffi</code> changes, the 
 <code>libgcj</code> bytecode interpreter is now enabled for Alpha systems.
 </dd>
-
 
 <dt>December 9, 2000</dt>
 <dd>
@@ -473,7 +461,6 @@ migrated</a> to the gcc repository. We've imported
 <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">tree</a>
 and use it as a replacement to zip.  </dd>
 
-
 <dt>December 8, 2000</dt>
 <dd>
 The libgcj repository is now <a href="http://gcc.gnu.org/ml/java/2000-12/msg00095.html">
@@ -482,7 +469,6 @@ closed</a>: We're moving our sources over to the gcc
 tree</a>. Read <a href="http://gcc.gnu.org/svn.html">here</a>
 how you will soon check your sources out.
 </dd>
-
 
 <dt>November 2, 2000</dt>
 <dd>
@@ -494,7 +480,6 @@ The output will be generated as the object is deserialized (i.e. the
 <code>readObject()</code> method is executed).
 </dd>
 
-
 <dt>October 29, 2000</dt>
 <dd>
 Bryce McKinlay checked in a large patch merging parts of the Java
@@ -502,7 +487,6 @@ Collections code from Classpath into libgcj.  He's also been working
 on reformatting code to fit the coding standards, and tuning the
 Collections code for performance.
 </dd>
-
 
 <dt>October 27, 2000</dt>
 <dd>
@@ -512,14 +496,12 @@ implementation for a while now, and I believe we are quite close to
 complete compatibility.
 </dd>
 
-
 <dt>October 22, 2000</dt>
 <dd>
 Rolf Rasmussen has checked in a large piece of code implementing most
 of Xlib-based AWT peers as well as parts of J2D.  Bryce McKinlay has
 also been working on AWT.
 </dd>
-
 
 <dt>September 30, 2000</dt>
 <dd>
@@ -530,7 +512,6 @@ Tom Tromey and Hans Boehm, and results in some significant
 performance gains</a> in memory-intensive code.
 </dd>
 
-
 <dt>September 8, 2000</dt>
 <dd>
 Warren Levy checked in various patches that provide much a more compatible
@@ -538,14 +519,12 @@ serialization implementation.  Still some special case classes to go, but
 90% of the serializable classes should now be compatible with Sun's JDK.
 </dd>
 
-
 <dt>September 6, 2000</dt>
 <dd>
 Anthony Green checked in a patch to make gcj read compressed zip
 files.  He also moved zlib into the gcc tree -- the first concrete
 work towards merging the gcc and libgcj source trees.
 </dd>
-
 
 <dt>August 20, 2000</dt>
 <dd>
@@ -557,7 +536,6 @@ Rasmussen have done a fair amount of work on <code>java.awt</code> (not
 ready for a screen shot yet, though).
 </dd>
 
-
 <dt>August 3, 2000</dt>
 <dd>
 Oskar Liljeblad has made the first release of
@@ -567,14 +545,12 @@ and <a href="http://www.gnome.org/">Gnome</a> bindings for Java using
 gcj.
 </dd>
 
-
 <dt>June 27, 2000</dt>
 <dd>
 A new <a href="done.html">Done with GCJ</a> section was added.
 Send your GCJ stories <a href="mailto:java@gcc.gnu.org">
 here</a>.
 </dd>
-
 
 <dt>May 19, 2000</dt>
 <dd>
@@ -588,7 +564,6 @@ Today we merged some major work done at Red Hat.  This included:
 </ul>
 </dd>
 
-
 <dt>May 2, 2000</dt>
 <dd>
 Tom Tromey checked in the JNI stubs patch for gcj.  This patch makes
@@ -596,12 +571,10 @@ it possible to use compiled Java code where the native methods are
 implemented using JNI.
 </dd>
 
-
 <dt>April 22, 2000</dt>
 <dd>
 The new <a href="projects.html">GCJ Projects</a> page is brought online.
 </dd>
-
 
 <dt>April 10, 2000</dt>
 <dd>
@@ -611,12 +584,10 @@ Once we have merged the necessary JDK 1.2 support, we'll update
 this to directly track Classpath.
 </dd>
 
-
 <dt>April 8, 2000</dt>
 <dd>
 Tom Tromey wrote most of <code>java.awt.event</code>.
 </dd>
-
 
 <dt>April 3, 2000</dt>
 <dd>
@@ -625,19 +596,16 @@ of gcj and libgcj.  See his original
 <a href="http://gcc.gnu.org/ml/java/2000-04/msg00022.html">message</a> for some caveats.
 </dd>
 
-
 <dt>March 26, 2000</dt>
 <dd>
 Hans Boehm contributed a port of libgcj to the IA-64.  This port
 includes the interpreter.
 </dd>
 
-
 <dt>March 15, 2000</dt>
 <dd>
 Jon Beniston contributed the beginnings of a Windows port of libgcj.
 </dd>
-
 
 <dt>March 13, 2000</dt>
 <dd>
@@ -645,18 +613,15 @@ Alexandre Petit-Bianco has checked in a change to the compiler to add
 support for most JDK 1.1 language features, such as inner classes.
 </dd>
 
-
 <dt>March 9, 2000</dt>
 <dd>
 Warren Levy checked in the basics of the <code>java.security.*</code> packages
 that he and Tom Tromey have been putting together.  It is just the basics
 of <code>java.security</code> and some of it is indeed stubbed.  It has been
-tried with the 20000120 snapshot of Cryptix JCE, so it is usable.
-
+tried with the 20000120 snapshot of Cryptix JCE, so it is usable.<br />
 Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
 things included.
 </dd>
-
 
 <dt>March 7, 2000</dt>
 <dd>
@@ -666,7 +631,6 @@ and type checking.  This should provide a huge speed increase
 for programs that use interfaces or things like ``instanceof''.
 </dd>
 
-
 <dt>March 6, 2000</dt>
 <dd>
 We are relicensing libgcj to a more liberal license, and we're
@@ -675,14 +639,12 @@ This will let us share code with the
 <a href="http://www.gnu.org/software/classpath/">Classpath</a> project.
 </dd>
 
-
 <dt>March 2, 2000</dt>
 <dd>
 Tom Tromey changed g++ to allow CNI code to catch and throw exceptions
 Java-style.  This makes it much easier to write CNI code which calls
 Java methods that throw exceptions.
 </dd>
-
 
 <dt>February 25, 2000</dt>
 <dd>
