@@ -1,5 +1,11 @@
 2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* index.html: Rotate news from here...
+	* news.html: ...to here.
+	Minor formatting changes.
+
+2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>
+	
 	* news.html: Untablify, and use CSS formatting instead.
 
 2006-07-01  Ranjit Mathew  <rmathew@gcc.gnu.org>
